```mermaid

classDiagram

  class user {
    - id
    - ..
  }

  class ballot {
    - id
    - title
    - description
    - type [privite, public]
    - anonimous [default(0)]
    - min_required_votes [default(0)]
    - ending_date
  }

  class option {
    - id
    - ballot_id
    - value
  }

  class ballot_user{
    - id
    - user_id
    - ballot_id
    - role ['creator','voter] 
    - candidate [default(0)]
  }
  

  class vote{
    - id 
    - user_id
    - ballot_id
    - option_id
  }
 
  user -- ballot_user
  ballot -- ballot_user
  ballot -- option  
  vote -- user
  vote -- ballot
  vote -- option
```

note : if ballot->type == privite ? only candidates can vote ELSE everybody can vote
